--- a/complete-duke/README.adoc
+++ b/complete-duke/README.adoc
@@ -115,3 +115,7 @@ insert into greeting(id,message,email) values (100, 'Howdy Jakarta EE 8!','duke@
 ```
 insert into greeting(id,message,email) values (100, 'Howdy Jakarta EE 9!','duke@dukes.java')
 ```
+
+== Solution
+
+Check out the master branch in order to see the migrated Complete Duke.
