--- a/complete-duke/README.adoc
+++ b/complete-duke/README.adoc
@@ -1,6 +1,6 @@
 = Migrating Complete Duke from Jakarta EE 8 to Jakarta EE 9
 
-Check out the start-tutorial branch if you want to do the migration yourself.
+Check out the `start-tutorial` branch if you want to do the migration yourself.
 Follow the steps below to complete the migration of Complete Duke from Jakarta EE 8
 to Jakarta EE 9.
 
